<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name"><xliff:g id="tp" translatable="false">Purramid</xliff:g> Class Tools</string>
    <string name="app_widget_description">Launch a Purramid class management tool</string>
    <string name="clock_title">Clock</string>
    <string name="probabilities_title">Probabilities</string>
    <string name="randomizers_title">Randomizers</string>
    <string name="screen_mask_title">Screen Mask</string>
    <string name="spotlight_title">Spotlight</string>
    <string name="timers_title">Timers</string>
    <string name="traffic_light_title">Traffic Light</string>
    <string name="about">About this App</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="overlay_permission_denied">Overlay permission denied</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="pause">Pause Button</string>
    <string name="pause_accessible">A Pause button to temporarily stop time.</string>
    <string name="play">Start</string>
    <string name="play_accessible">A Start button to begin time</string>
    <string name="reset">Reset Button</string>
    <string name="reset_accessible">A Reset button to return time to its default</string>
    <string name="settings">Settings</string>
    <string name="settings_accessible">A Settings button to open a customization window</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="app_color">Color</string>
    <string name="color_white">White</string>
    <string name="color_white_accessible">Make your clock background white</string>
    <string name="color_black">Black</string>
    <string name="color_black_accessible">Make your clock background black</string>
    <string name="color_goldenrod">Goldenrod</string>
    <string name="color_goldenrod_accessible">Make your clock background goldenrod</string>
    <string name="color_teal">Teal</string>
    <string name="color_teal_accessible">Make your clock background teal</string>
    <string name="color_lightblue">Light Blue</string>
    <string name="color_lightblue_accessible">Make your clock background light blue</string>
    <string name="color_violet">Violet</string>
    <string name="color_violet_accessible">Make your clock background violet</string>
    <string name="add_emoji">Add Emoji</string>
    <string name="add_emoji_description">Add Emoji</string>
    <string name="add_image">Add Image</string>
    <string name="add_image_description">Add Image</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="optimize">Optimize</string>
    <string name="clock_settings_title">Clock Settings</string>
    <string name="enable_floating_clock">Enable Floating Clock</string>
    <string name="clock_mode">Clock Type</string>
    <string name="analog">Analog</string>
    <string name="digital">Digital</string>
    <string name="am_designator">AM</string>
    <string name="pm_designator">PM</string>
    <string name="clock_setting_24_hour">24-Hour Clock</string>
    <string name="set_time_zone">Set Time Zone</string>
    <string name="error_loading_model">Unable to load model: %1$s</string>
    <string name="error_loading_texture">Unable to load texture: %1$s</string>
    <string name="error_creating_texture">Unable to create texture: %1$s</string>
    <string name="display_seconds">Display Seconds</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="nest_clock">Nest Clock</string>
    <string name="add_another_clock">Add another Clock</string>
    <string name="city_mindelo">Mindelo</string>
    <string name="city_ponta_delgada">Ponta Delgada</string>
    <string name="city_praia">Praia</string>
    <string name="city_lagoa">Lagoa</string>
    <string name="city_honolulu">Honolulu</string>
    <string name="city_papeete">Papeete</string>
    <string name="city_kailua">Kailua</string>
    <string name="city_hilo">Hilo</string>
    <string name="city_avarua">Avarua</string>
    <string name="city_pago_pago">Pago Pago</string>
    <string name="city_alogi">Alofi</string>
    <string name="city_nuuk">Nuuk</string>
    <string name="city_qaanaaq">Qaanaaq</string>
    <string name="city_grytviken">Grytviken</string>
    <string name="city_sao_paulo">São Paulo</string>
    <string name="city_bueno_aires">Buenos Aires</string>
    <string name="city_rio_de_janeiro">Rio de Janeiro</string>
    <string name="city_montevideo">Montevideo</string>
    <string name="city_stanley">Stanley</string>
    <string name="city_st_johns">St. John\'s</string>
    <string name="city_santiago">Santiago</string>
    <string name="city_caracas">Caracas</string>
    <string name="city_san_juan">San Juan</string>
    <string name="city_asuncion">Asuncion</string>
    <string name="city_halifax">Halifax</string>
    <string name="city_la_paz">La Paz</string>
    <string name="city_lima">Lima</string>
    <string name="city_bogota">Bogotá</string>
    <string name="city_miami">Miami</string>
    <string name="city_toronto">Toronto</string>
    <string name="city_montreal">Montréal</string>
    <string name="city_havana">Havana</string>
    <string name="city_quito">Quito</string>
    <string name="city_cancun">Cancun</string>
    <string name="city_rio_branco">Rio Branco</string>
    <string name="city_nassau">Nassau</string>
    <string name="city_boston">Boston</string>
    <string name="new_york">New York City</string>
    <string name="city_nashua">Nashua</string>
    <string name="city_mexico_city">Mexico City</string>
    <string name="city_chicago">Chicago</string>
    <string name="city_monterrey">Monterrey</string>
    <string name="city_detroit">Detroit</string>
    <string name="city_austin">Austin</string>
    <string name="city_new_orleans">New Orleans</string>
    <string name="city_st_louis">St. Louis</string>
    <string name="city_columbia">Columbia</string>
    <string name="city_san_salvador">San Salvador</string>
    <string name="city_tegucigalpa">Tegucigalpa</string>
    <string name="city_regina">Regina</string>
    <string name="city_phoenix">Phoenix</string>
    <string name="city_denver">Denver</string>
    <string name="city_ciudad_juarez">Ciudad Juarez</string>
    <string name="city_calgary">Calgary</string>
    <string name="city_mazatlan">Mazatlan</string>
    <string name="city_boise">Boise</string>
    <string name="city_yellowknife">Yellowknife</string>
    <string name="city_los_angeles">Los Angeles</string>
    <string name="city_seattle">Seattle</string>
    <string name="city_san_francisco">San Francisco</string>
    <string name="city_vancouver">Vancouver</string>
    <string name="city_tijuana">Tijuana</string>
    <string name="city_mexicali">Mexicali</string>
    <string name="city_burnaby">Burnaby</string>
    <string name="city_adamstown">Adamstown</string>
    <string name="city_anchorage">Anchorage</string>
    <string name="city_fairbanks">Fairbanks</string>
    <string name="city_juneau">Juneau</string>
    <string name="city_belfast">Belfast</string>
    <string name="city_glasgow">Glasgow</string>
    <string name="city_cardiff">Cardiff</string>
    <string name="city_london">London</string>
    <string name="city_bamako">Bamako</string>
    <string name="city_dakar">Dakar</string>
    <string name="city_marrakech">Marrakech</string>
    <string name="city_dublin">Dublin</string>
    <string name="city_reykjavik">Reykjavík</string>
    <string name="city_lisbon">Lisbon</string>
    <string name="city_lagos">Lagos</string>
    <string name="city_kinshasa">Kinshasa</string>
    <string name="city_paris">Paris</string>
    <string name="city_luanda">Luanda</string>
    <string name="city_madrid">Madrid</string>
    <string name="city_barcelona">Barcelona</string>
    <string name="city_berlin">Berlin</string>
    <string name="city_rome">Rome</string>
    <string name="city_brazzaville">Brazzaville</string>
    <string name="city_algiers">Algiers</string>
    <string name="city_vienna">Vienna</string>
    <string name="city_budapest">Budapest</string>
    <string name="city_amsterdam">Amsterdam</string>
    <string name="city_copenhagen">Copenhagen</string>
    <string name="city_stockholm">Stockholm</string>
    <string name="city_oslo">Oslo</string>
    <string name="city_tunis">Tunis</string>
    <string name="city_windhoek">Windhoek</string>
    <string name="city_warsaw">Warsaw</string>
    <string name="city_belgrade">Belgrade</string>
    <string name="city_mebourne">Melbourne</string>
    <string name="city_sydney">Sydney</string>
    <string name="city_brisbane">Brisbane</string>
    <string name="city_vladivostok">Vladivostok</string>
    <string name="city_canberra">Canberra</string>
    <string name="city_port_moresby">Port Moresby</string>
    <string name="city_hobart">Hobart</string>
    <string name="city_maina">Asan-Maina</string>
    <string name="city_weno">Weno</string>
    <string name="city_noumea">Nouméa</string>
    <string name="city_magadan">Magadan</string>
    <string name="city_port_vila">Port-Vila</string>
    <string name="city_okha">Okha</string>
    <string name="city_aukland">Auckland</string>
    <string name="city_wellington">Wellington</string>
    <string name="city_kamchatskiy">Petropavlovsk-amchatskiy</string>
    <string name="city_suva">Suva</string>
    <string name="city_tarawa">Tarawa</string>
    <string name="city_waitangi">Waitangi</string>
    <string name="city_apia">Apia</string>
    <string name="city_nukualofa">Nuku\'alofa</string>
    <string name="city_neiafu">Neiafu</string>
    <string name="city_afega">Afega</string>
    <string name="city_cairo">Cairo</string>
    <string name="city_khartoum">Khartoum</string>
    <string name="city_johannesburg">Johannesburg</string>
    <string name="city_cape_town">Cape Town</string>
    <string name="city_kyiv">Kyiv</string>
    <string name="city_beirut">Beirut</string>
    <string name="city_bucharest">Bucharest</string>
    <string name="city_harare">Harare</string>
    <string name="city_helsinki">Helsinki</string>
    <string name="city_kigali">Kigali</string>
    <string name="city_maputo">Maputo</string>
    <string name="city_jerusalem">Jerusalem</string>
    <string name="city_tripoli">Tripoli</string>
    <string name="city_athens">Athens</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_istanbul">Istanbul</string>
    <string name="city_riyadh">Riyadh</string>
    <string name="city_baghdad">Baghdad</string>
    <string name="randomizer_mode_dice">Dice Mode</string>
    <string name="setting_dice_use_pips">Use Pips for d6</string>
    <string name="setting_dice_percentile_mode">Percentile Dice (d%)</string>
    <string name="setting_dice_roll_animation">Roll Animation</string>
    <string name="setting_dice_crit_celebration">Critical Celebration (d20=20)</string>
    <string name="randomizer_settings_title">Randomizer Settings</string>
    <string name="randomizer_mode">Randomizer Type</string>
    <string name="list_editor">List Editor</string>
    <string name="setting_spin_animation">Spin Animation</string>
    <string name="setting_announce">Announce Result</string>
    <string name="setting_celebrate">Celebrate Result</string>
    <string name="setting_sequence">Sequence Results</string>
    <string name="randomizer_mode_slots">Slots Mode</string>
    <string name="setting_slots_num_columns">Number of Columns</string>
    <string name="setting_slots_columns_3">3</string>
    <string name="setting_slots_columns_5">5</string>
    <string name="add_another_spotlight">Add another Spotlight</string>
    <string name="change_shape_square">Change shape to Square</string>
    <string name="setting_add_messages">Add Message</string>
</resources>