<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/randomizers_nav_graph"
    app:startDestination="@id/randomizerMainFragment">

    <fragment
        android:id="@+id/randomizerMainFragment"
        android:name="com.example.purramid.thepurramid.randomizers.ui.RandomizerMainFragment"
        android:label="@string/randomizers_title"
        tools:layout="@layout/fragment_randomizer_main" >
        <action
            android:id="@+id/action_main_to_settings"
            app:destination="@id/randomizerSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/randomizerSettingsFragment"
        android:name="com.example.purramid.thepurramid.randomizers.ui.RandomizerSettingsFragment"
        android:label="@string/randomizer_settings_title"
        tools:layout="@layout/fragment_randomizer_settings">
        <action
            android:id="@+id/action_settings_to_list_editor"
            app:destination="@id/listCreatorFragment"/>
    </fragment>

    <fragment
        android:id="@+id/listCreatorFragment"
        android:name="com.example.purramid.thepurramid.randomizers.ui.ListCreatorFragment"
        android:label="@string/list_editor"
        tools:layout="@layout/fragment_list_creator">
        <argument
            android:name="listId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/slotsMainFragment"
        android:name="com.example.purramid.thepurramid.randomizers.ui.SlotsMainFragment"
        android:label="@string/randomizer_mode_slots"
        tools:layout="@layout/fragment_slots_main">
        <argument
            android:name="instanceId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_slotsMainFragment_to_settingsFragment"
            app:destination="@id/randomizerSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/diceMainFragment"
        android:name="com.example.purramid.thepurramid.randomizers.ui.DiceMainFragment"
        android:label="@string/randomizer_mode_dice"
        tools:layout="@layout/fragment_dice_main">
        <action
            android:id="@+id/action_diceMainFragment_to_randomizerSettingsFragment"
            app:destination="@id/randomizerSettingsFragment" />
        <argument
            android:name="instanceId"
            app:argType="string" />
    </fragment>


</navigation>